# plinky

./: .envrc  .gitattributes  CONTRIBUTING.md  Cargo.toml  README.md  flake.nix  rust-toolchain.toml
plink/: Cargo.toml  build.rs
plink/linktest/harness/: main.rs
plink/src/: cli.rs  debug_print.rs  interner.rs  linker.rs  main.rs  write_to_disk.rs
plink/src/linker/: elf_builder.rs  layout.rs  mod.rs  object.rs  relocator.rs  strings.rs  symbols.rs
plink/src/passes/: build_elf.rs  deduplicate.rs  layout.rs  load_inputs.rs  mod.rs  relocate.rs  write_to_disk.rs
plink/src/repr/: elf_builder.rs  layout.rs  mod.rs  object.rs  relocator.rs  strings.rs  symbols.rs
plink/tests/linktest/: main.rs
plinky/: Cargo.toml  build.rs
plinky/linktest/: harness.rs
plinky/linktest/_shared/: hello-world.c  syscall.exit.x86.S  syscall.exit.x86_64.S  syscall.write.x86.S  syscall.write.x86_64.S
plinky/linktest/archive_no_symbol_table/: foo.S
plinky/linktest/as-needed/: dependency.S  entry.S  test-64bit.snap  test.toml  unused.S  used.S
plinky/linktest/asm_shared_library/: foo.S  test-32bit.snap  test-64bit.snap
plinky/linktest/comments/: linker-64bit.snap  test-64bit.snap  test.toml
plinky/linktest/custom_entry_point/: linker-32bit.snap  run-64bit.snap  test-32bit.snap  test.toml
plinky/linktest/deduplication-mismatch/: test.toml
plinky/linktest/deduplication_mismatch/: bar.S
plinky/linktest/dynamic-linking/: data.S  entry-no-pic.x86.asm  entry-no-pic.x86_64.asm  entry-pic.x86.S  entry-pic.x86_64.S  entry.S  entry.c  impl.x86.S  impl.x86_64.S  no-pie-entry-no-pic-32bit.snap  no-pie-entry-pic-32bit.snap  no-pie-entry-pic-64bit.snap  pie-32bit.snap  pie-64bit.snap  test.toml
plinky/linktest/dynamic-linking-with-soname/: entry.c  test-32bit.snap  test-64bit.snap  test.toml
plinky/linktest/empty-sections-ignored/: test-64bit.snap
plinky/linktest/empty_sections_ignored/: foo.S  linker-64bit.snap  test-64bit.snap  test.toml
plinky/linktest/env_mismatch/: test.toml
plinky/linktest/executable_stack/: linker-64bit.snap  test-64bit.snap  test.toml
plinky/linktest/freestanding-c/: pie-got-32bit.snap  pie-got-64bit.snap  pie-got-relro-32bit.snap  pie-got-relro-64bit.snap  pie-plt-32bit.snap  pie-plt-64bit.snap  pie-plt-now-32bit.snap  pie-plt-now-64bit.snap  static-got-32bit.snap  static-got-64bit.snap  test.toml
plinky/linktest/freestanding_c/: pie-got-32bit.snap  pie-got-64bit.snap  pie-got-relro-32bit.snap  pie-got-relro-64bit.snap  pie-plt-32bit.snap  pie-plt-64bit.snap  pie-plt-now-32bit.snap  pie-plt-now-64bit.snap  static-got-32bit.snap  static-got-64bit.snap  syscalls.64bit.S  test.toml
plinky/linktest/freestanding_c_got/: linker-32bit.snap  linker-64bit.snap  test.toml
plinky/linktest/freestanding_c_got_pic/: linker-32bit.snap  linker-64bit.snap  run-32bit.snap  run-64bit.snap  test-64bit.snap  test.toml
plinky/linktest/freestanding_c_got_pic_relro/: linker-32bit.snap  linker-64bit.snap  test-32bit.snap  test-64bit.snap  test.toml
plinky/linktest/gc-sections/: foo.S  test-64bit.snap  test.toml
plinky/linktest/gc_sections/: linker-64bit.snap  test-64bit.snap
plinky/linktest/gnu-property/: duplicate-features2-used-64bit.snap  duplicate-isa-used-64bit.snap  duplicate_features2_used.S  duplicate_isa_used.S  empty.S  entry_isa_features2.S  isa-features2-one-file-32bit.snap  isa-features2-one-file-64bit.snap  isa-features2-two-files-32bit.snap  isa-features2-two-files-64bit.snap  isa-two-files-with-features2-in-one-32bit.snap  (+6 more)
plinky/src/: cli.rs  debug_print.rs  interner.rs  linker.rs  main.rs
plinky_elf/: Cargo.toml
plinky_elf/elftest/: harness.rs
plinky_elf/src/: errors.rs  ids.rs  lib.rs  raw.rs  render_elf.rs
plinky_elf/tests/: snapshot.rs
plinky_pkg_config/: Cargo.toml
plinky_pkg_config/pkgtest/: args-double-quote.pc  args-escape-whitespace.pc  args-escape-whitespace.snap  args-escaped-end-quote.pc  args-escaped-end-quote.snap  args-escaped-start-quote.pc  args-escaped-start-quote.snap  args-single-quote.pc  args-single-quote.snap  args-variable-with-space.pc  args-variable-with-space.snap  bomb.pc  bomb.snap  colons.pc  colons.snap  dependencies.pc  dependencies.snap  harness.rs  invalid-directive.pc  invalid-directive.snap  invalid-variable.pc  invalid-variable.snap  line-start-with-colon.pc  line-start-with-colon.snap  line-start-with-equal.pc  line-start-with-equal.snap  missing-variable.pc  missing-variable.snap  no-separator.snap  no-variables.pc  no-variables.snap  simple-args.pc  simple-args.snap  simple-variable.pc  simple-variable.snap
plinky_pkg_config/src/: discover.rs  lexer.rs  lib.rs  parser.rs  template.rs  types.rs
(+712 files in other folders)
