[workspace]
resolver = "2"
members = [
    "plink",
    "plink_ar",
    "plink_diagnostics",
    "plink_elf",
    "plink_macros",
    "plink_rawutils",
]

[workspace.dependencies]
anyhow = "1.0.71"
insta = "1.30.0"
serde = { version = "1.0.190", features = ["derive"] }
tempfile = "3.6.0"
toml = "0.8.6"

[workspace.lints.clippy]
new_without_default = "allow"
len_without_is_empty = "allow"
