[workspace]
resolver = "2"
members = [
    "plinky",
    "plinky_ar",
    "plinky_diagnostics",
    "plinky_elf",
    "plinky_macros",
    "plinky_macros_quote",
    "plinky_utils",
]

[workspace.dependencies]
plinky_ar = { path = "plinky_ar" }
plinky_diagnostics = { path = "plinky_diagnostics" }
plinky_elf = { path = "plinky_elf" }
plinky_macros = { path = "plinky_macros" }
plinky_macros_quote = { path = "plinky_macros_quote" }
plinky_utils = { path = "plinky_utils" }

anyhow = "1.0.71"
insta = "1.30.0"
serde = { version = "1.0.190", features = ["derive"] }
tempfile = "3.6.0"
toml = "0.8.6"

[workspace.lints.clippy]
new_without_default = "allow"
len_without_is_empty = "allow"
