[package]
name = "plink"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[[test]]
name = "linktest"
path = "linktest/harness/main.rs"

[dependencies]
plink_ar = { path = "../plink_ar" }
plink_macros = { path = "../plink_macros" }
plink_elf = { path = "../plink_elf" }

[dev-dependencies]
anyhow.workspace = true
insta.workspace = true
serde.workspace = true
tempfile.workspace = true
toml.workspace = true

[lints]
workspace = true
