cargo-features = ["different-binary-name"]

[package]
name = "plinky"
edition = "2024"

[[bin]]
path = "src/main.rs"
name = "plinky"
filename = "ld.plinky"

[[test]]
name = "linktest"
path = "linktest/harness.rs"
harness = false

[dependencies]
plinky_ar.workspace = true
plinky_diagnostics.workspace = true
plinky_macros.workspace = true
plinky_elf.workspace = true
plinky_utils.workspace = true

[dev-dependencies]
anyhow.workspace = true
plinky_test_harness.workspace = true
serde.workspace = true
toml.workspace = true

[lints]
workspace = true
