[package]
name = "plinky_elf"
edition = "2021"

[[test]]
name = "elftest"
path = "elftest/harness.rs"
harness = false

[dependencies]
plinky_diagnostics.workspace = true
plinky_macros.workspace = true
plinky_utils.workspace = true

[dev-dependencies]
anyhow.workspace = true
insta.workspace = true
plinky_test_harness.workspace = true
serde.workspace = true
tempfile.workspace = true
toml.workspace = true

[lints]
workspace = true
